fix: correct @font-face usage to implement fira sans; tableHead colors darker for contrast

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,14 +2,26 @@
 
 @font-face {
   font-family: 'fira sans';
-  src: url('/public/fonts/Fira_Sans/FiraSans-Regular.ttf') format('ttf');
-  font-weight: normal;
+  src: url('/public/fonts/Fira_Sans/FiraSans-Regular.ttf') format('truetype');
+  font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: 'fira sans';
-  src: url('/public/fonts/Fira_Sans/FiraSans-Medium.ttf') format('ttf');
-  font-weight: normal;
+  src: url('/public/fonts/Fira_Sans/FiraSans-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'fira sans';
+  src: url('/public/fonts/Fira_Sans/FiraSans-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'fira sans';
+  src: url('/public/fonts/Fira_Sans/FiraSans-ExtraBold.ttf') format('truetype');
+  font-weight: 800;
   font-style: normal;
 }
 
